--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Our goal is to lower the barrier of entry to producing custom silicon, establish
 <div class="article-container">
   <h4>Barcelona RISC-V Workshop: Day Two </h4>
   <p>
-  The eighth RISC-V workshop is continuing today in Barcleona. As usual, I&rsquo;ll be keeping a semi-live blog of talks and announcements throughout the day. Fast interrupts for RISC-V: Krste Asanovic Embedded is a major use for RISC-V. There is a desire for faster interrupt handling with support for nested preempted interrupts. Summary of current RISC-V interrupts Local interrupts are directly connected to one hart. There&rsquo;s no arbitrartion between harts to sevice.
+  The eighth RISC-V workshop is continuing today in Barcleona. As usual, I&rsquo;ll be keeping a semi-live blog of talks and announcements throughout the day. Fast interrupts for RISC-V: Krste Asanovic Embedded is a major use for RISC-V. There is a desire for faster interrupt handling with support for nested preempted interrupts. Summary of current RISC-V interrupts Local interrupts are directly connected to one hart. There&rsquo;s no arbitration between harts to service.
   <a href='http://www.lowrisc.org/blog/2018/05/barcelona-risc-v-workshop-day-two'>Read More</a>
   </p>
 </div>
