link to slides from Barcelona RISC-V workshop

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Our goal is to lower the barrier of entry to producing custom silicon, establish
 <div class="article-container">
   <h4>Barcelona RISC-V Workshop: Day Two </h4>
   <p>
-  The eighth RISC-V workshop is continuing today in Barcleona. As usual, I&rsquo;ll be keeping a semi-live blog of talks and announcements throughout the day. Fast interrupts for RISC-V: Krste Asanovic Embedded is a major use for RISC-V. There is a desire for faster interrupt handling with support for nested preempted interrupts. Summary of current RISC-V interrupts Local interrupts are directly connected to one hart. There&rsquo;s no arbitration between harts to service.
+  The eighth RISC-V workshop is continuing today in Barcleona. As usual, I&rsquo;ll be keeping a semi-live blog of talks and announcements throughout the day. Look back here for the day one live blog. Note that slides from most presentations are now available at riscv.org. Fast interrupts for RISC-V: Krste Asanovic Embedded is a major use for RISC-V. There is a desire for faster interrupt handling with support for nested preempted interrupts.
   <a href='http://www.lowrisc.org/blog/2018/05/barcelona-risc-v-workshop-day-two'>Read More</a>
   </p>
 </div>
@@ -182,7 +182,7 @@ Our goal is to lower the barrier of entry to producing custom silicon, establish
 <div class="article-container">
   <h4>Barcelona RISC-V Workshop: Day One </h4>
   <p>
-  The eighth RISC-V workshop is going on today in Barcleona. As usual, I&rsquo;ll be keeping a semi-live blog of talks and announcements throughout the day. Follow here for the day two live blog. Introduction: Rick O&rsquo;Connor This workshop has 325 attendees representing 101 companies and 25 universties. Largest outside of Silicon Valley. Rick gives the usual overview of the RISC-V Foundation structure. The RISC-V Foundation currently has over 150 members, including invidual members.
+  The eighth RISC-V workshop is going on today in Barcleona. As usual, I&rsquo;ll be keeping a semi-live blog of talks and announcements throughout the day. Follow here for the day two live blog. Note that slides from most presentations are now available at riscv.org. Introduction: Rick O&rsquo;Connor This workshop has 325 attendees representing 101 companies and 25 universties. Largest outside of Silicon Valley. Rick gives the usual overview of the RISC-V Foundation structure.
   <a href='http://www.lowrisc.org/blog/2018/05/barcelona-risc-v-workshop-day-one'>Read More</a>
   </p>
 </div>
