initial update of jobs page

--- a/jobs/index.html
+++ b/jobs/index.html
@@ -83,10 +83,32 @@
 
 <h2 id="lowrisc-is-hiring:1ddef76c49bd04b91977172aa8d2852c">lowRISC is hiring</h2>
 
-<p>More job adverts will be published shortly. In the mean time, if you&rsquo;re
-interested in working on digital design, verification, secure system design,
-firmware, or toolchains, feel free to email info@lowrisc.org with a CV and
-background.</p>
+<p>lowRISC C.I.C. is a not-for-profit company that aims to demonstrate, promote
+and support the use of open-source hardware. The lowRISC project was
+established with the aim of bringing the benefits of open-source to the
+hardware world and is working to do this by producing a high quality secure,
+open, and flexible System-on-Chip (SoC) platform. lowRISC C.I.C. also provides
+hardware and software services to support the growing RISC-V eco-system. Our
+expertise includes the LLVM Compiler, hardware security extensions and RISC-V
+tools, hardware and processor design.</p>
+
+<p>We are hiring for multiple positions to help deliver an exciting, high impact
+open source hardware roadmap in collaboration with industry partners:</p>
+
+<ul>
+<li>Hardware Design Engineer</li>
+<li>Secure Hardware Design Engineer</li>
+<li>Hardware Test and Verification Engineer</li>
+<li>Software/Hardware Engineer (SoC tooling)</li>
+<li>Firmware and Compiler Engineer</li>
+</ul>
+
+<p>You must have the right to work in the UK. Starting salary is 40-65K GBP
+depending on experience. Benefits include a generous employer pension
+contribution (up to 12.5%) and holiday allowance (33 days including
+public holidays). You will join us at our offices in ideaSpace West, Cambridge.</p>
+
+<p>Please get in touch with info@lowrisc.org for more information.</p>
 
                     </section>
                 </article>
