add info about hiring etc

--- a/about/index.html
+++ b/about/index.html
@@ -82,13 +82,11 @@
                         
 
 <p>lowRISC is creating a fully open-sourced, Linux-capable, RISC-V-based
-  SoC, that can be used either directly or as the basis for a custom design.
-  We aim to complete our SoC design this year.</p>
+  SoC, that can be used either directly or as the basis for a custom design.</p>
 
-<p>Our open-source SoC (System-on-a-Chip)
-  designs will be based on the 64-bit <a href="http://riscv.org/">RISC-V</a> instruction
-  set architecture. Volume silicon manufacture is planned
-  as is a low-cost development board.</p>
+<p>We are <a href="https://lowrisc.applytojob.com/">hiring</a> for multiple positions to
+  deliver on an exciting, high impact, open source hardware roadmap in
+  collaboration with Google and other industry partners.</p>
 
 <p>lowRISC is a not-for-profit organisation working closely with the University
   of Cambridge and the open-source community.</p>
@@ -132,21 +130,27 @@ accompanied by <a href="https://www.lowrisc.org/docs/untether-v0.2/">extensive d
 
 <h3 id="the-team:6083a88ee3411b0d17ce02d738f69d47">The Team</h3>
 
-<p>lowRISC was founded by:</p>
+<p>The lowRISC CIC board consists of:</p>
 
 <ul>
 <li>Robert Mullins - Computer Laboratory, University of Cambridge, co-founder of Raspberry Pi</li>
 <li>Gavin Ferris - Dreamworks, Radioscape (co-founder), Aspect Capital (former CIO)</li>
 <li>Alex Bradbury - Computer Laboratory, University of Cambridge and Raspberry Pi</li>
+<li>Dominic Rizzo - Google</li>
+<li>Ron Minnich - Google</li>
 </ul>
 
-<p>In addition to the above, the core development team at the University of
-Cambridge Computer Laboratory is comprised of:</p>
+<p>The lowRISC CIC engineering team consists of:</p>
 
 <ul>
-<li>Wei Song</li>
-<li>Jonathan Kimmitt</li>
+<li>Alex Bradbury</li>
+<li>Luís Marques</li>
+<li>Philipp Wagner</li>
+<li>&hellip;and soon more - we&rsquo;re <a href="https://lowrisc.applytojob.com/">hiring</a></li>
 </ul>
+
+<p>At the University of Cambridge Computer Laboratory, Jonathan Kimmitt also
+works as part of our core development team.</p>
 
 <p>We are also grateful to our collaborators elsewhere in the community, as well
 as the undergraduates, graduate students, and interns who have contributed.</p>
@@ -160,7 +164,7 @@ as the undergraduates, graduate students, and interns who have contributed.</p>
 <li><a href="http://en.wikipedia.org/wiki/Andrew_Huang">Bunnie Huang (Hacker)</a></li>
 <li><a href="https://www.moorcrofts.com/about/andrew-katz/">Andrew Katz (Moorcrofts LLP)</a></li>
 <li><a href="http://www.linkedin.com/pub/dominic-rizzo/28/3a6/b35">Dominic Rizzo (Google)</a></li>
-<li><a href="http://cseweb.ucsd.edu/~mbtaylor/">Michael Taylor (UCSD)</a></li>
+<li><a href="https://www.cs.washington.edu/people/faculty/profmbt">Michael Taylor (University of Washington)</a></li>
 </ul>
 
                     </section>
