update based on latest commit

--- a/about/index.html
+++ b/about/index.html
@@ -115,6 +115,8 @@
 <li>…and soon more - <a href="https://www.lowrisc.org/jobs/">we’re hiring</a></li>
 </ul>
 
+<p><img src="/img/team.jpg" alt="lowRISC team photo" title="lowRISC team" /></p>
+
 <p>At the <a href="http://www.cst.cam.ac.uk">University of Cambridge Computer Laboratory</a>, Jonathan Kimmitt also works as part of our core development team.</p>
 
 <p>We are also grateful to our collaborators elsewhere in the community, as well as the undergraduates, graduate students, and interns who have contributed.</p>
