--- a/community/index.html
+++ b/community/index.html
@@ -103,7 +103,7 @@
 
 <p><img src="/img/chat.png" alt="illustrative icon" title="chat" /></p>
 
-<p>We used to use IRC (#lowRISC on irc.oftc.net) but mostly don’t now. We are looking into a new open source chat system - watch this space.</p>
+<p>We used to use IRC (#lowRISC on irc.oftc.net) but mostly don’t now. We have an open group chat on <a href="https://zulipchat.com/">Zulip</a>, which <a href="https://lowrisc.zulipchat.com/register/">community members are welcome to join</a>.</p>
 
 <h3 id="source-code:f3b3effc19b97b19aaf2ce392427d255">Source code</h3>
 
@@ -137,7 +137,10 @@
 
 <h1 id="getting-started-with-lowrisc:f3b3effc19b97b19aaf2ce392427d255">Getting started with lowRISC</h1>
 
-<p>We really appreciate contributions of code or ideas to our software and hardware development efforts. Take a look at our mailing list and source repos.  If you’re looking for ideas on where to start, perhaps introduce yourself on the mailing list detailing your interests.</p>
+<p>We really appreciate contributions of code or ideas to our software and
+hardware development efforts. Take a look at our mailing list and source
+repos.  If you’re looking for ideas on where to start, perhaps introduce
+yourself on the mailing list or group chat detailing your interests.</p>
 
 <h1 id="for-potential-partners:f3b3effc19b97b19aaf2ce392427d255">For potential partners</h1>
 
