--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
       <div class="description">
         <p><b>Open to the core</b><br>
-Enabling open source silicon<br>through collaborative engineering<br>of tools and designs
+Enabling open source silicon<br>through collaborative engineering<br>
 
         </p>
         <span>
