add postal address

--- a/about/index.html
+++ b/about/index.html
@@ -196,6 +196,8 @@
 
 <p>You can contact lowRISC at info@lowrisc.org</p>
 
+<p>Please send any post to: lowRISC CIC, ideaSpace West, The Hauser Forum, 3 Charles Babbage Rd, Cambridge CB3 0GT</p>
+
                     </section>
                 </article>
 
