fix link on home page

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ Enabling open source silicon<br>through collaborative engineering<br>
 </h4><h4>    enabling open hardware to be a reality for diverse applications at scale
 
 <div class="">
-  <a href="https://lowrisc.org/jobs/" class="button button-big button-red" style="margin-top: 15px;" >Check out lowRISC job opportunities!</a>
+  <a href="https://www.lowrisc.org/jobs/" class="button button-big button-red" style="margin-top: 15px;" >Check out lowRISC job opportunities!</a>
 </div>
   </section>
 
