update jobs and about page

--- a/about/index.html
+++ b/about/index.html
@@ -112,6 +112,7 @@
 <li>Luís Marques</li>
 <li>Pirmin Vogel</li>
 <li>Philipp Wagner</li>
+<li>Sam Elliott</li>
 <li>…and soon more - <a href="https://www.lowrisc.org/jobs/">we’re hiring</a></li>
 </ul>
 
