--- a/jobs/index.html
+++ b/jobs/index.html
@@ -85,17 +85,19 @@
 
 <p>lowRISC C.I.C. is a not-for-profit company that aims to demonstrate, promote and support the use of open-source hardware - bringing the benefits of open-source to the hardware world. We are producing high-quality, security-focused, open, and flexible IP.</p>
 
-<p>We are hiring for multiple positions to deliver on an exciting, high impact, open source hardware roadmap in collaboration with Google and other industry partners.</p>
+<p>We are currently growing our team to deliver on an exciting, high impact, open source hardware roadmap in collaboration with Google and other industry partners.</p>
+
+<p>We welcome speculative applications from skilled engineers, for <a href="https://lowrisc.applytojob.com/apply/">specific role outlines</a>. If you think you could contribute to lowRISC but none of these roles are a fit for you, we welcome <a href="https://lowrisc.applytojob.com/apply/NHq7IqDaqL/Speculative-Applications-General">general applications</a> - please explain in a covering letter how your skills and experience could make a difference at lowRISC. These speculative applications will be reviewed on a rolling basis.</p>
 
 <p><div class="">
-    <a href="https://lowrisc.applytojob.com/" class="button button-big button-red" style="margin-top: 15px; color: #fff;">Check out all our open roles</a>
+    <a href="https://lowrisc.applytojob.com/" class="button button-big button-red" style="margin-top: 15px; color: #fff;">Apply now!</a>
   </div></p>
 
 <p>This is a great time to join our growing team and be part of the open source silicon revolution. We’re based in <a href="https://www.ideaspace.cam.ac.uk/">a friendly innovation space</a> in the beautiful city of Cambridge, UK, near the University of Cambridge’s <a href="http://www.cst.cam.ac.uk">Department of Computer Science and Technology</a>. Cambridge is home to a varied and lively tech cluster, arguably the most successful in Europe with more than 1,500 high-tech companies based in the area, employing more than 54,000 people.</p>
 
 <p><img src="/img/ideaspacewest.JPG" alt="photo of Hauser Forum where the lowRISC team are based" title="ideaSpace" /></p>
 
-<p>All <a href="https://lowrisc.applytojob.com/">our open opportunities</a> are exciting positions for skilled engineers who will appreciate the freedom to explore and invent in the open. lowRISC also provides the opportunity to work within a team exploring the full hardware/software stack on a broad range of challenging projects.</p>
+<p>All <a href="https://lowrisc.applytojob.com/">our roles</a> are exciting positions for skilled engineers who will appreciate the freedom to explore and invent in the open. lowRISC also provides the opportunity to work within a team exploring the full hardware/software stack on a broad range of challenging projects.</p>
 
 <p>You’ll be joining a team with expertise including processor and SoC design, with a particular focus on  hardware security, design verification, RISC-V tools, and the LLVM compiler.</p>
 
