tweak formatting of CoC

--- a/code-of-conduct/index.html
+++ b/code-of-conduct/index.html
@@ -83,17 +83,20 @@
 
 <h1 id="lowrisc-code-of-conduct:d3030a18b089fdb1fbfabf6e75e4aef0">lowRISC Code of Conduct</h1>
 
-<p>The lowRISC community has always worked to be a welcoming and respectful community, and we want to ensure that doesn’t change as we grow and evolve. To that end, we have a few ground rules that we ask people to adhere to:
-* be friendly and patient,
-* be welcoming,
-* be considerate,
-* be respectful,
-* be careful in the words that you choose and be kind to others, and
-* when we disagree, try to understand why.</p>
+<p>The lowRISC community has always worked to be a welcoming and respectful community, and we want to ensure that doesn’t change as we grow and evolve. To that end, we have a few ground rules that we ask people to adhere to:</p>
+
+<ul>
+<li>be friendly and patient,</li>
+<li>be welcoming,</li>
+<li>be considerate,</li>
+<li>be respectful,</li>
+<li>be careful in the words that you choose and be kind to others, and</li>
+<li>when we disagree, try to understand why.</li>
+</ul>
 
 <p>This isn’t an exhaustive list of things that you can’t do. Rather, take it in the spirit in which it’s intended - a guide to make it easier to communicate and participate in the community.</p>
 
-<p>This code of conduct applies to all spaces managed by lowRISC or lowRISC CIC. This includes IRC and other chat channels, mailing lists, bug trackers, events such as developer meetings and socials, and any other forums created by lowRISC that the community uses for communication. It applies to all of your communication and conduct in these spaces, including emails, chats, things you say, slides, videos, posters, signs, or even t-shirts you display in these spaces. In addition, violations of this code outside these spaces may, in rare cases, affect a person’s ability to participate within them, when the conduct amounts to an egregious violation of this code.</p>
+<p>This code of conduct applies to all spaces managed by lowRISC or lowRISC CIC. This includes IRC and other chat channels, mailing lists, bug trackers, events such as workshops or socials, and any other forums created by lowRISC that the community uses for communication. It applies to all of your communication and conduct in these spaces, including emails, chats, things you say, slides, videos, posters, signs, or even t-shirts you display in these spaces. In addition, violations of this code outside these spaces may, in rare cases, affect a person’s ability to participate within them, when the conduct amounts to an egregious violation of this code.</p>
 
 <p>If you believe someone is violating the code of conduct, we ask that you report it by emailing conduct@lowrisc.org. For more details please see our Reporting Guide below.</p>
 
@@ -102,14 +105,17 @@
 We strive to be a community that welcomes and supports people of all backgrounds and identities. This includes, but is not limited to members of any race, ethnicity, culture, national origin, colour, immigration status, social and economic class, educational level, sex, sexual orientation, gender identity and expression, age, size, family status, political belief, religion or lack thereof, and mental and physical ability.
 <strong>Be considerate.</strong> Your work will be used by other people, and you in turn will depend on the work of others. Any decision you take will affect users and colleagues, and you should take those consequences into account. Remember that we’re a world-wide community, so you might not be communicating in someone else’s primary language.
 <strong>Be respectful.</strong> Not all of us will agree all the time, but disagreement is no excuse for poor behavior and poor manners. We might all experience some frustration now and then, but we cannot allow that frustration to turn into a personal attack. It’s important to remember that a community where people feel uncomfortable or threatened is not a productive one. Members of the lowRISC community should be respectful when dealing with other members as well as with people outside the lowRISC community.
-<strong>Be careful in the words that you choose and be kind to others.</strong> Do not insult or put down other participants. Harassment and other exclusionary behavior aren’t acceptable. This includes, but is not limited to:
-* Violent threats or language directed against another person.
-* Discriminatory jokes and language.
-* Posting sexually explicit or violent material.
-* Posting (or threatening to post) other people’s personally identifying information (“doxing”).
-* Personal insults, especially those using racist or sexist terms.
-* Unwelcome sexual attention.
-* Advocating for, or encouraging, any of the above behavior.</p>
+<strong>Be careful in the words that you choose and be kind to others.</strong> Do not insult or put down other participants. Harassment and other exclusionary behavior aren’t acceptable. This includes, but is not limited to:</p>
+
+<ul>
+<li>Violent threats or language directed against another person.</li>
+<li>Discriminatory jokes and language.</li>
+<li>Posting sexually explicit or violent material.</li>
+<li>Posting (or threatening to post) other people’s personally identifying information (“doxing”).</li>
+<li>Personal insults, especially those using racist or sexist terms.</li>
+<li>Unwelcome sexual attention.</li>
+<li>Advocating for, or encouraging, any of the above behavior.</li>
+</ul>
 
 <p>In general, if someone asks you to stop, then stop. Persisting in such behavior after being asked to stop is considered harassment.</p>
 
@@ -125,40 +131,49 @@ We strive to be a community that welcomes and supports people of all backgrounds
 
 <p>If you believe anyone is in physical danger, please notify appropriate law enforcement first. If you are unsure what law enforcement agency is appropriate, please include this in your report and we will attempt to notify them.</p>
 
-<p>If the violation occurs at an event such as a Developer Meeting and requires immediate attention, you can also reach out to any of the event organizers or staff. Event organizers and staff will be prepared to handle the incident and able to help. If you cannot find one of the organizers, the venue staff can locate one for you. We will also post detailed contact information for specific events as part of each events’ information. In person reports will still be kept confidential exactly as above, but also feel free to (anonymously if needed) email conduct@lowRISC.org.</p>
+<p>If the violation occurs at an event such as a conference or workshop and requires immediate attention, you can also reach out to any of the event organizers or staff. Event organizers and staff will be prepared to handle the incident and able to help. If you cannot find one of the organizers, the venue staff can locate one for you. We will also post detailed contact information for specific events as part of each events’ information. In person reports will still be kept confidential exactly as above, but also feel free to (anonymously if needed) email conduct@lowRISC.org.</p>
 
 <h3 id="filing-a-report:d3030a18b089fdb1fbfabf6e75e4aef0">Filing a report</h3>
 
-<p>Reports can be as formal or informal as needed for the situation at hand. If possible, please include as much information as you can. If you feel comfortable, please consider including:
-* Your contact info (so we can get in touch with you if we need to follow up).
-* Names (real, nicknames, or pseudonyms) of any individuals involved. If there were other witnesses besides you, please try to include them as well.
-* When and where the incident occurred. Please be as specific as possible.
-* Your account of what occurred. If there is a publicly available record (e.g. a mailing list archive or a public IRC logger) please include a link.
-* Any extra context you believe existed for the incident.
-* If you believe this incident is ongoing.
-* Any other information you believe we should have.</p>
+<p>Reports can be as formal or informal as needed for the situation at hand. If possible, please include as much information as you can. If you feel comfortable, please consider including:</p>
+
+<ul>
+<li>Your contact info (so we can get in touch with you if we need to follow up).</li>
+<li>Names (real, nicknames, or pseudonyms) of any individuals involved. If there were other witnesses besides you, please try to include them as well.</li>
+<li>When and where the incident occurred. Please be as specific as possible.</li>
+<li>Your account of what occurred. If there is a publicly available record (e.g. a mailing list archive or a public IRC logger) please include a link.</li>
+<li>Any extra context you believe existed for the incident.</li>
+<li>If you believe this incident is ongoing.</li>
+<li>Any other information you believe we should have.</li>
+</ul>
 
 <h3 id="what-happens-after-you-file-a-report:d3030a18b089fdb1fbfabf6e75e4aef0">What happens after you file a report?</h3>
 
 <p>You will receive an email from the Code of Conduct team acknowledging receipt within 24 hours (and we will aim to respond much quicker than that).</p>
 
-<p>The Code of Conduct team will immediately meet to review the incident and try to determine:
-* What happened and who was involved.
-* Whether this event constitutes a code of conduct violation.
-* Whether this is an ongoing situation, or if there is a threat to anyone’s physical safety.</p>
+<p>The Code of Conduct team will immediately meet to review the incident and try to determine:</p>
+
+<ul>
+<li>What happened and who was involved.</li>
+<li>Whether this event constitutes a code of conduct violation.</li>
+<li>Whether this is an ongoing situation, or if there is a threat to anyone’s physical safety.</li>
+</ul>
 
 <p>If this is determined to be an ongoing incident or a threat to physical safety, the working groups’ immediate priority will be to protect everyone involved. This means we may delay an “official” response until we believe that the situation has ended and that everyone is physically safe.</p>
 
 <p>The Code of Conduct team will try to contact other parties involved or witnessing the event to gain clarity on what happened and understand different perspectives.</p>
 
-<p>Once the Code of Conduct team has a complete account of the events they will make a decision as to how to respond. Responses may include:
-* Nothing, if we determine no violation occurred or it has already been appropriately resolved.
-* Providing either moderation or mediation to ongoing interactions (where appropriate, safe, and desired by both parties).
-* A private reprimand from the working group to the individuals involved.
-* An imposed vacation (i.e. asking someone to “take a week off” from a mailing list or IRC).
-* A public reprimand.
-* A permanent or temporary ban from some or all lowRISC spaces (mailing lists, chat, events, etc.)
-* Involvement of relevant law enforcement if appropriate.</p>
+<p>Once the Code of Conduct team has a complete account of the events they will make a decision as to how to respond. Responses may include:</p>
+
+<ul>
+<li>Nothing, if we determine no violation occurred or it has already been appropriately resolved.</li>
+<li>Providing either moderation or mediation to ongoing interactions (where appropriate, safe, and desired by both parties).</li>
+<li>A private reprimand from the working group to the individuals involved.</li>
+<li>An imposed vacation (i.e. asking someone to “take a week off” from a mailing list or IRC).</li>
+<li>A public reprimand.</li>
+<li>A permanent or temporary ban from some or all lowRISC spaces (mailing lists, chat, events, etc.)</li>
+<li>Involvement of relevant law enforcement if appropriate.</li>
+</ul>
 
 <p>If the situation is not resolved within one week, we’ll respond within one week to the original reporter with an update and explanation.</p>
 
@@ -174,9 +189,12 @@ We strive to be a community that welcomes and supports people of all backgrounds
 
 <h1 id="members-of-the-code-of-conduct-team:d3030a18b089fdb1fbfabf6e75e4aef0">Members of the Code of Conduct team</h1>
 
-<p>The members serving on the advisory committee are listed here in case you are more comfortable talking directly to a specific member of the committee.
-* Alex Bradbury
-* Laura James</p>
+<p>The members serving on the advisory committee are listed here in case you are more comfortable talking directly to a specific member of the committee.</p>
+
+<ul>
+<li>Alex Bradbury</li>
+<li>Laura James</li>
+</ul>
 
 <h1 id="attributions:d3030a18b089fdb1fbfabf6e75e4aef0">Attributions</h1>
 
