further CoC formatting tweaks

--- a/code-of-conduct/index.html
+++ b/code-of-conduct/index.html
@@ -100,12 +100,14 @@
 
 <p>If you believe someone is violating the code of conduct, we ask that you report it by emailing conduct@lowrisc.org. For more details please see our Reporting Guide below.</p>
 
-<p><strong>Be friendly and patient.</strong>
-<strong>Be welcoming.</strong>
-We strive to be a community that welcomes and supports people of all backgrounds and identities. This includes, but is not limited to members of any race, ethnicity, culture, national origin, colour, immigration status, social and economic class, educational level, sex, sexual orientation, gender identity and expression, age, size, family status, political belief, religion or lack thereof, and mental and physical ability.
-<strong>Be considerate.</strong> Your work will be used by other people, and you in turn will depend on the work of others. Any decision you take will affect users and colleagues, and you should take those consequences into account. Remember that we’re a world-wide community, so you might not be communicating in someone else’s primary language.
-<strong>Be respectful.</strong> Not all of us will agree all the time, but disagreement is no excuse for poor behavior and poor manners. We might all experience some frustration now and then, but we cannot allow that frustration to turn into a personal attack. It’s important to remember that a community where people feel uncomfortable or threatened is not a productive one. Members of the lowRISC community should be respectful when dealing with other members as well as with people outside the lowRISC community.
-<strong>Be careful in the words that you choose and be kind to others.</strong> Do not insult or put down other participants. Harassment and other exclusionary behavior aren’t acceptable. This includes, but is not limited to:</p>
+<ul>
+<li><strong>Be friendly and patient.</strong></li>
+<li><strong>Be welcoming.</strong>
+We strive to be a community that welcomes and supports people of all backgrounds and identities. This includes, but is not limited to members of any race, ethnicity, culture, national origin, colour, immigration status, social and economic class, educational level, sex, sexual orientation, gender identity and expression, age, size, family status, political belief, religion or lack thereof, and mental and physical ability.</li>
+<li><strong>Be considerate.</strong> Your work will be used by other people, and you in turn will depend on the work of others. Any decision you take will affect users and colleagues, and you should take those consequences into account. Remember that we’re a world-wide community, so you might not be communicating in someone else’s primary language.</li>
+<li><strong>Be respectful.</strong> Not all of us will agree all the time, but disagreement is no excuse for poor behavior and poor manners. We might all experience some frustration now and then, but we cannot allow that frustration to turn into a personal attack. It’s important to remember that a community where people feel uncomfortable or threatened is not a productive one. Members of the lowRISC community should be respectful when dealing with other members as well as with people outside the lowRISC community.</li>
+<li><strong>Be careful in the words that you choose and be kind to others.</strong> Do not insult or put down other participants. Harassment and other exclusionary behavior aren’t acceptable.  In general, if someone asks you to stop, then stop. Persisting in such behavior after being asked to stop is considered harassment.
+This includes, but is not limited to:
 
 <ul>
 <li>Violent threats or language directed against another person.</li>
@@ -115,11 +117,9 @@ We strive to be a community that welcomes and supports people of all backgrounds
 <li>Personal insults, especially those using racist or sexist terms.</li>
 <li>Unwelcome sexual attention.</li>
 <li>Advocating for, or encouraging, any of the above behavior.</li>
+</ul></li>
+<li><strong>When we disagree, try to understand why.</strong> Disagreements, both social and technical, happen all the time and lowRISC is no exception. It is important that we resolve disagreements and differing views constructively. Remember that we’re different. The strength of lowRISC comes from its varied community, people from a wide range of backgrounds. Different people have different perspectives on issues. Being unable to understand why someone holds a viewpoint doesn’t mean that they’re wrong. Don’t forget that it is human to err and blaming each other doesn’t get us anywhere. Instead, focus on helping to resolve issues and learning from mistakes.</li>
 </ul>
-
-<p>In general, if someone asks you to stop, then stop. Persisting in such behavior after being asked to stop is considered harassment.</p>
-
-<p><strong>When we disagree, try to understand why.</strong> Disagreements, both social and technical, happen all the time and lowRISC is no exception. It is important that we resolve disagreements and differing views constructively. Remember that we’re different. The strength of lowRISC comes from its varied community, people from a wide range of backgrounds. Different people have different perspectives on issues. Being unable to understand why someone holds a viewpoint doesn’t mean that they’re wrong. Don’t forget that it is human to err and blaming each other doesn’t get us anywhere. Instead, focus on helping to resolve issues and learning from mistakes.</p>
 
 <h3 id="questions:d3030a18b089fdb1fbfabf6e75e4aef0">Questions?</h3>
 
