--- a/about/index.html
+++ b/about/index.html
@@ -110,6 +110,7 @@
 <li>Alex Bradbury</li>
 <li>Laura James</li>
 <li>Luís Marques</li>
+<li>Tom Roberts</li>
 <li>Pirmin Vogel</li>
 <li>Philipp Wagner</li>
 <li>Sam Elliott</li>
@@ -197,7 +198,7 @@
 
 <p>You can contact lowRISC at info@lowrisc.org</p>
 
-<p>Please send any post to: lowRISC CIC, ideaSpace West, The Hauser Forum, 3 Charles Babbage Rd, Cambridge CB3 0GT</p>
+<p>Please send any post to: lowRISC CIC, c/o Repositive, Betjeman House, 104 Hills Road, Cambridge, CB2 1LQ, UK</p>
 
                     </section>
                 </article>
